--- a/package/package.json
+++ b/package/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-lib-testttt",
+  "name": "my-lib",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -15,6 +15,19 @@
   "files": [
     "dist"
   ],
+  "devDependencies": {
+    "@babel/core": "7.17.8",
+    "@types/node": "17.0.23",
+    "@types/react": "17.0.43",
+    "@types/react-dom": "17.0.14",
+    "@vitejs/plugin-react": "1.2.0",
+    "acorn-jsx": "5.3.2",
+    "babel-loader": "8.2.4",
+    "json": "11.0.0",
+    "typescript": "4.6.3",
+    "vite": "2.8.6",
+    "vite-plugin-dts": "1.0.3"
+  },
   "main": "./dist/my-lib.umd.js",
   "module": "./dist/my-lib.es.js",
   "types": "./dist/index.d.ts",
