--- a/package/package.json
+++ b/package/package.json
@@ -35,6 +35,10 @@
     ".": {
       "import": "./dist/my-lib.es.js",
       "require": "./dist/my-lib.umd.js"
+    },
+    "./dist/my-lib.css": {
+      "import": "./dist/my-lib.css",
+      "require": "./dist/my-lib.css"
     }
   }
 }
